service-mesh/app/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: app-service-mesh

spec:
  replicas: 3
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 10%
  selector:
    matchLabels:
      app: app-service-mesh
  template:
    metadata:
      labels:
        app: app-service-mesh
    spec:
      containers:
        - name: app-service-mesh
          image: lucasnfarias/app-service-mesh:v1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 200m
              memory: 128Mi
            limits:
              cpu: 400m
              memory: 256Mi
